# pixelbeat

./: Cargo.toml  README.md  README_CN.md
src/: config.rs  main.rs
src/cli/: commands.rs  format.rs
src/daemon/: ipc.rs  player.rs  playlist.rs  radio.rs  spectrum.rs  youtube.rs
src/tui/: app.rs  theme.rs
